32816 Fix placeholder colour contrast ratio

--- a/themes/agov/agov_zen/css/agov_styles.css
+++ b/themes/agov/agov_zen/css/agov_styles.css
@@ -756,6 +756,24 @@ article img.img-float-left {
 }
 
 /* Global form elements */
+::-webkit-input-placeholder {
+  color: #737373;
+}
+
+:-moz-placeholder {
+  /* Firefox 18- */
+  color: #737373;
+}
+
+::-moz-placeholder {
+  /* Firefox 19+ */
+  color: #737373;
+}
+
+:-ms-input-placeholder {
+  color: #737373;
+}
+
 .form-textarea-wrapper textarea {
   min-height: 138px;
 }
@@ -1005,7 +1023,7 @@ html.js .collapsed .fieldset-legend {
 }
 
 #block-menu-menu-quick-links ul a, .menu-block-agov_menu_block-sidebar .menu a {
-  background: url('../images/block-li-bg.png?1424906511') no-repeat scroll left 5px;
+  background: url('../images/block-li-bg.png?1435812272') no-repeat scroll left 5px;
   display: block;
   padding-left: 15px;
   padding-bottom: 2px;
@@ -1593,7 +1611,7 @@ tr.selected td {
 }
 .progress .filled {
   background-color: #0072b9;
-  background-image: url('../images/progress.gif?1424906511');
+  background-image: url('../images/progress.gif?1435812272');
 }
 
 #region-content .content ul li {
@@ -1816,7 +1834,7 @@ form#sweaver-frontend > div {
   position: absolute;
   right: 0px;
   text-indent: -100px;
-  background: url('../images/search-btn-mobile.png?1424906511') 50% 50% no-repeat;
+  background: url('../images/search-btn-mobile.png?1435812272') 50% 50% no-repeat;
   background-color: #1b1b1b;
   width: 32px;
   font-weight: bold;
@@ -1906,7 +1924,7 @@ th a, th img {
   display: inline-block;
   width: 26px;
   height: 26px;
-  background-image: url('../images/font-resize-bg.png?1424906511');
+  background-image: url('../images/font-resize-bg.png?1435812272');
   background-repeat: no-repeat;
 }
 .text-resize a.font-large {
@@ -2514,7 +2532,7 @@ body {
   border-top: none;
 }
 #comments .comment {
-  background-image: url('../images/comment-icon.png?1424906511');
+  background-image: url('../images/comment-icon.png?1435812272');
   background-position: 13px 15px;
   background-repeat: no-repeat;
   background-color: #f3f3f3;
@@ -2843,7 +2861,7 @@ footer .block {
   width: 1px;
   overflow: hidden;
   clip: rect(1px, 1px, 1px, 1px);
-  color: inherit;
+  color: inherit !important;
 }
 
 .front .breadcrumb {
@@ -3164,7 +3182,7 @@ a.tabledrag-handle .handle {
   text-align: left;
   text-indent: -100px;
   padding: 5px 14px;
-  background: url('../images/featured-articles-pause.png?1424906511') no-repeat 0px -27px;
+  background: url('../images/featured-articles-pause.png?1435812272') no-repeat 0px -27px;
 }
 .rslides_tabs li a.pause.paused {
   background-position: 0px 0px;
